--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,6 +21,11 @@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="fullscreen" href="#" role="button">
+                        <span style="color:red;background:white">Red Fonts are sampleplacefolder</span>
+                    </a>
+                </li>
             </ul>
 
             <!-- Top Right navbar links -->
@@ -37,8 +42,8 @@
         <aside class="main-sidebar sidebar-light-primary elevation-1 my-sidebar" style="background-color:#f0f0f0;color: #3e445c">
             <!-- Brand Logo -->
             <a href="../../index3.html" class="brand-link my-brand-link">
-                <img src="~/images/AITRIOS-Logo-White.png" alt="AITRIOS Console" class="brand-image elevation-0 my-brand-image">
-                <span class="brand-text font-weight-light my-brand-text">Console</span>
+                <img src="~/images/AITRIOS-Logo-White.png" alt="AITRIOS" class="brand-image elevation-0 my-brand-image">
+                <span class="brand-text font-weight-light my-brand-text">AITRIOS</span>
             </a>
 
             <div class="sidebar my-sidebar">
@@ -49,19 +54,19 @@
                         <li class="nav-item">
                             <a href="../../index.html" class="nav-link">
                                 <i class="nav-icon fa-solid fa-circle-play navbar-fa"></i>
-                                <p>Start Demo</p>
+                                <p style="color:red">Start Demo</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../../index.html" class="nav-link">
                                 <i class="nav-icon fa-solid fa-circle-stop navbar-fa"></i>
-                                <p>Stop Demo</p>
+                                <p style="color:red">Stop Demo</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../../index.html" class="nav-link">
                                 <i class="nav-icon fa-solid fa-cloud navbar-fa"></i>
-                                <p>Check Connectivity</p>
+                                <p style="color:red">Check Connectivity</p>
                             </a>
                         </li>
                     </ul>
