--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                         </div>
                         <input type="checkbox" name="aiSwtichCamera1" data-handle-width="100" checked data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-text="Start" data-off-text="Stop">
                     </div>
-                    <div class="callout callout-info">
+                    <div class="callout callout-info" style="margin-top:0.1em">
                         <h5>
                             <i class="fas fa-poll"></i>
                             Results
