--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,6 +69,12 @@
                                 <p style="color:red">Check Connectivity</p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link" onclick="EnableDisableStatus();return false;">
+                                <i class="nav-icon fas fa-cogs"></i>
+                                <p>Display Status</p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
