--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
             <div class="card card-default my-card">
                 <div class="card-header">
                     <h3 class="card-title">
-                        <i class="fa-solid fa-wifi fa-wifi-connected"></i>
-                        Camera 1
+                        <i id="camera_1_wifi_icon" class="fa-solid fa-wifi fa-wifi-connected"></i>
+                        <span id="camera_1_name"></span>
                     </h3>
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
@@ -56,7 +56,7 @@
                         <div>
                             Start/Stop AI Inference
                         </div>
-                        <input type="checkbox" name="aiSwtichCamera1" data-handle-width="100" checked data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-text="Start" data-off-text="Stop">
+                        <input type="checkbox" name="aiSwtichCamera1" data-handle-width="100" data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-text="Running" data-off-text="Stopped">
                     </div>
                     <div class="callout callout-info" style="margin-top:0.1em">
                         <h5>
@@ -92,6 +92,10 @@
                                 <canvas id="canvasCamera1Overlay" height="320" width="320" style="max-width:320px;max-height:320px;z-index:300"></canvas>
                                 <canvas id="canvasCamera1" height="320" width="320" style="max-width:320px;max-height:320px;z-index:100;position:absolute"></canvas>
                             </div>
+                            <div id="canvasCamera1LoaderWrapper" class="canvasLoaderWrapper" height="320" width="320" style="display:block">
+                                <div class="canvasLoader">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -103,8 +107,8 @@
             <div class="card card-default my-card">
                 <div class="card-header">
                     <h3 class="card-title">
-                        <i class="fa-solid fa-wifi fa-wifi-connected"></i>
-                        Camera 2
+                        <i id="camera_2_wifi_icon" class="fa-solid fa-wifi fa-wifi-connected"></i>
+                        <span id="camera_2_name"></span>
                     </h3>
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
@@ -149,7 +153,7 @@
                         <div>
                             Start/Stop AI Inference
                         </div>
-                        <input type="checkbox" name="aiSwtichCamera2" data-handle-width="100" checked data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-text="Start" data-off-text="Stop">
+                        <input type="checkbox" name="aiSwtichCamera2" data-handle-width="100" data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-text="Running" data-off-text="Stopped">
                     </div>
                     <div class="callout callout-info" style="margin-top:0.1em">
                         <h5>
@@ -185,6 +189,10 @@
                                 <canvas id="canvasCamera2Overlay" height="320" width="320" style="max-width:320px;max-height:320px;z-index:300"></canvas>
                                 <canvas id="canvasCamera2" height="320" width="320" style="max-width:320px;max-height:320px;z-index:100;position:absolute"></canvas>
                             </div>
+                            <div id="canvasCamera2LoaderWrapper" class="canvasLoaderWrapper" height="320" width="320" style="display:block">
+                                <div class="canvasLoader">
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -197,8 +205,8 @@
             <div class="card card-default my-card">
                 <div class="card-header">
                     <h3 class="card-title">
-                        <i class="fa-solid fa-wifi fa-wifi-disconnected"></i>
-                        Camera 3
+                        <i id="camera_3_wifi_icon" class="fa-solid fa-wifi fa-wifi-disconnected"></i>
+                        <span id="camera_3_name"></span>
                     </h3>
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
@@ -243,7 +251,7 @@
                         <div>
                             Start/Stop AI Inference
                         </div>
-                        <input type="checkbox" name="aiSwtichCamera3" data-handle-width="100" checked data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-text="Start" data-off-text="Stop">
+                        <input type="checkbox" name="aiSwtichCamera3" data-handle-width="100" data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-text="Running" data-off-text="Stopped">
                     </div>
                     <div class="callout callout-info" style="margin-top:0.1em">
                         <h5>
@@ -279,6 +287,10 @@
                                 <canvas id="canvasCamera3Overlay" height="320" width="320" style="max-width:320px;max-height:320px;z-index:300"></canvas>
                                 <canvas id="canvasCamera3" height="320" width="320" style="max-width:320px;max-height:320px;z-index:100;position:absolute"></canvas>
                             </div>
+                            <div id="canvasCamera3LoaderWrapper" class="canvasLoaderWrapper" height="320" width="320" style="display:block">
+                                <div class="canvasLoader">
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -286,11 +298,21 @@
             </div>
         </div>
     </div>
-    <div class="row" style="padding-top: 0.25em;">
+    <div id="divLog" class="row" style="padding-top: 0.25em;padding-bottom: 0.25em;">
         <div class="col-12 col-sm-12 col-md-12 my-col">
             <div class="card card-default my-card">
-                <textarea id="txAreaStatus" style="height:7em;font-family:monospace">
-                </textarea>
+                <div class="card-header" style="background-color:#fff !important">
+                    <div class="card-tools">
+                        <button type="button" class="btn" id="btnClearLogs">
+                            <i class="far fa-trash-alt btn-fa"></i>Clear Logs
+                        </button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div style="width:100%">
+                        <textarea id="txAreaStatus" title="Log Display Area" style="width:100%;height:20em;min-height:7em;font-size:0.8em;font-family:monospace;"></textarea>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -317,8 +339,16 @@
         let sliderThresholdValueCamera3 = document.getElementById("SpanConfidenceLevelCamera3");
         let signalRHub;
 
+        window.onload = function () {
+        };
+
         $(document).ready(function () {
 
+            let camera1_id = '@(ViewData["Camera1_ID"])';
+            let camera2_id = '@(ViewData["Camera2_ID"])'
+            let camera3_id = '@(ViewData["Camera3_ID"])';
+
+            //
             //
             // Slider
             //
@@ -337,9 +367,9 @@
             $('.sidebar-mini').removeClass('sidebar-open');
             $('.sidebar-mini').addClass('sidebar-closed sidebar-collapse');
 
-            initCanvas('canvasCamera1', "/images/People.png");
-            initCanvas('canvasCamera2', "/images/Box.png");
-            initCanvas('canvasCamera3', "/images/Car.png");
+            initCanvas('canvasCamera1');
+            initCanvas('canvasCamera2');
+            initCanvas('canvasCamera3');
 
             document.getElementById("txAreaStatus").value = '';
 
@@ -360,12 +390,26 @@
                 console.debug(`deviceTelemetry ${jsonPretty}`);
                 document.getElementById("txAreaStatus").value += `${timeStamp} Telemetry : ${jsonPretty}\r\n`;
             });
+
+
+            //document.getElementById("camera_1_name").innerHTML = '@(ViewData["Camera_1_ID"])';
+            //document.getElementById("camera_2_name").innerHTML = '@(ViewData["Camera_2_ID"])';
+            //document.getElementById("camera_3_name").innerHTML = '@(ViewData["Camera_3_ID"])';
+
+            UpdateCameraNames('@(ViewData["Camera_1_ID"])', '@(ViewData["Camera_2_ID"])', '@(ViewData["Camera_3_ID"])');
+           
         });
 
         function getDate(dateString) {
             var date = new Date(Date.UTC(dateString.substr(0, 4), dateString.substr(4, 2), dateString.substr(6, 2), dateString.substr(8, 2), dateString.substr(10, 2), dateString.substr(12, 2), dateString.substr(14, 3)));
             return date;
         }
+
+        $('#btnClearLogs').click(function (evt) {
+            document.getElementById('txAreaStatus').value = null;
+            var message = '@ViewData["Camera_1_ID"]';
+            console.debug(message);
+        })
 
     </script>
 }
