--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AITRIOS_Console_Mockup</title>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet'>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,21 +26,16 @@
 <body class="hold-transition sidebar-mini sidebar-collapse">
 
     <div class="wrapper">
-
         <div class="preloader flex-column justify-content-center align-items-center">
-            <img class="animation__shake" src="images/AITRIOS-Logo-White.png" alt="AITRIOS Logo" height="255" width="255" style="">
+            <img class="animation__shake" src="images/AITRIOS-Logo-White.svg" alt="AITRIOS Logo" >
         </div>
+
         <!-- Top Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-dark my-navbar-dark">
+        <nav class="main-header navbar navbar-expand navbar-dark my-navbar">
             <!-- Top Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-                        <span style="color:red;background:white">Red Fonts are sampleplacefolder</span>
-                    </a>
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><img src="images/Humburger.svg" alt="Menu" width="18" height="12"></a>
                 </li>
             </ul>
 
@@ -53,32 +50,32 @@
         </nav>
 
         <!-- Side Bar -->
-        <aside class="main-sidebar sidebar-light-primary elevation-1 my-sidebar" style="background-color:#f0f0f0;color: #3e445c">
+        <aside class="main-sidebar sidebar-dark elevation-1 my-sidebar">
             <!-- Brand Logo -->
-            <a href="../../index3.html" class="brand-link my-brand-link">
-                <img src="~/images/AITRIOS-Logo-White.png" alt="AITRIOS" class="brand-image elevation-0 my-brand-image">
-                <span class="brand-text font-weight-light my-brand-text">AITRIOS</span>
+            <a href="#" class="brand-link my-brand-link my-brand-image-wrapper">
+                <img src="~/images/AITRIOS-Logo-White.svg" alt="AITRIOS" class="brand-image elevation-0 my-brand-image" width="29" height="38">
+                <span class="brand-text font-subhead my-brand-text" style="padding-left:0.3em">AITRIOS</span>
             </a>
 
             <div class="sidebar my-sidebar">
 
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                    <ul class="nav nav-pills nav-sidebar flex-column my-nav-sidebar " data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link">
+                            <a href="../../index.html" class="nav-link font-labels">
                                 <i class="nav-icon fa-solid fa-circle-play navbar-fa"></i>
                                 <p style="color:red">Start Demo</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link">
+                            <a href="../../index.html" class="nav-link font-labels">
                                 <i class="nav-icon fa-solid fa-circle-stop navbar-fa"></i>
                                 <p style="color:red">Stop Demo</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link">
+                            <a href="../../index.html" class="nav-link font-labels">
                                 <i class="nav-icon fa-solid fa-cloud navbar-fa"></i>
                                 <p style="color:red">Check Connectivity</p>
                             </a>
@@ -89,24 +86,15 @@
                                 <p id="labeltxAreaStatus">Display Logs</p>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link" onclick="GetDevices();return false;">
-                                <i class="nav-icon fas fa-cogs"></i>
-                                <p>GetDevices (Test Purpose)</p>
-                            </a>
-                        </li>
                     </ul>
                 </nav>
             </div>
         </aside>
-        <div class="content-wrapper my-content-wrapper" style="background-color: #f0f0f0">
+        <div class="content-wrapper my-content-wrapper">
             <section class="content">
                 @RenderBody()
             </section>
         </div>
-        <aside class="control-sidebar control-sidebar-dark control-sidebar-light">
-            <!-- Control sidebar content goes here -->
-        </aside>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
