--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -74,12 +74,12 @@
                         <span class="font-subhead">Image</span>
                     </div>
                     <div class="body-frame-canvas font-labels">
-                        <div class="container loader-parent my-div-image">
-                            <div class="row justify-content-center align-items-center">
-                                <canvas id="canvasCamera1Overlay" height="320" width="320" style="max-width:320px;max-height:320px;z-index:300"></canvas>
-                                <canvas id="canvasCamera1" height="320" width="320" style="max-width:320px;max-height:320px;z-index:100;position:absolute"></canvas>
+                        <div class="container loader-parent my-div-image" id="canvasCamera1Container">
+                            <div class="row justify-content-center align-items-center" style="margin:0">
+                                <canvas class="my-canvas" id="canvasCamera1Overlay" style="z-index:300"></canvas>
+                                <canvas class="my-canvas" id="canvasCamera1" style="z-index:100;position:absolute"></canvas>
                             </div>
-                            <div id="canvasCamera1LoaderWrapper" class="canvasLoaderWrapper" height="320" width="320" style="display:block">
+                            <div id="canvasCamera1LoaderWrapper" class="canvasLoaderWrapper" style="height:100%;width:100%;display:block">
                                 <div class="canvasLoader">
                                 </div>
                             </div>
@@ -158,12 +158,12 @@
                         <span class="font-subhead">Image</span>
                     </div>
                     <div class="body-frame-canvas font-labels">
-                        <div class="container loader-parent my-div-image">
-                            <div class="row justify-content-center align-items-center">
-                                <canvas id="canvasCamera2Overlay" height="320" width="320" style="max-width:320px;max-height:320px;z-index:300"></canvas>
-                                <canvas id="canvasCamera2" height="320" width="320" style="max-width:320px;max-height:320px;z-index:100;position:absolute"></canvas>
+                        <div class="container loader-parent my-div-image" id="canvasCamera2Container">
+                            <div class="row justify-content-center align-items-center" style="margin:0">
+                                <canvas class="my-canvas" id="canvasCamera2Overlay" style="z-index:300"></canvas>
+                                <canvas class="my-canvas" id="canvasCamera2" style="z-index:100;position:absolute"></canvas>
                             </div>
-                            <div id="canvasCamera2LoaderWrapper" class="canvasLoaderWrapper" height="320" width="320" style="display:block">
+                            <div id="canvasCamera2LoaderWrapper" class="canvasLoaderWrapper" style="height:100%;width:100%;display:block">
                                 <div class="canvasLoader">
                                 </div>
                             </div>
@@ -244,12 +244,12 @@
                         <span class="font-subhead">Image</span>
                     </div>
                     <div class="body-frame-canvas font-labels">
-                        <div class="container loader-parent my-div-image">
-                            <div class="row justify-content-center align-items-center">
-                                <canvas id="canvasCamera3Overlay" height="320" width="320" style="max-width:320px;max-height:320px;z-index:300"></canvas>
-                                <canvas id="canvasCamera3" height="320" width="320" style="max-width:320px;max-height:320px;z-index:100;position:absolute"></canvas>
+                        <div class="container loader-parent my-div-image" id="canvasCamera3Container">
+                            <div class="row justify-content-center align-items-center" style="margin:0">
+                                <canvas class="my-canvas" id="canvasCamera3Overlay" style="z-index:300"></canvas>
+                                <canvas class="my-canvas" id="canvasCamera3" style="z-index:100;position:absolute"></canvas>
                             </div>
-                            <div id="canvasCamera3LoaderWrapper" class="canvasLoaderWrapper" height="320" width="320" style="display:block">
+                            <div id="canvasCamera3LoaderWrapper" class="canvasLoaderWrapper" style="height:100%;width:100%;display:block">
                                 <div class="canvasLoader">
                                 </div>
                             </div>
