--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -252,7 +252,7 @@ body {
     padding: 10px;
     gap: 10px;
     background: linear-gradient(180deg, #DADADA 0%, #9F9D9D 100%);
-    width:100%;
+    width: 100%;
 }
 
 .separator {
@@ -280,8 +280,6 @@ body {
 .WiFi-Svg-DisConnect {
     color: #95B5D4;
 }
-
-
 
 .form-field {
     display: flex;
@@ -323,6 +321,27 @@ body {
             --toggle-color-ball: var(--white);
             left: calc(var(--toggle-size) * 0.9);
         }
+
+.my-div-image {
+    padding : 0 !important;
+    height:340px;
+    max-height:340px;
+}
+
+.canvasOverlay {
+    position: absolute;
+    height: 340px;
+    max-height: 340px;
+}
+
+.my-canvas {
+    /*    max-width: 100%;
+*/ max-height: 340px;
+    height: 340px;
+    width: 100%;
+    /*    height:100%;
+*/
+}
 
 .my-slider {
     -webkit-appearance: none;
@@ -368,7 +387,6 @@ body {
 .my-navbar, .my-brand-image-wrapper {
     height: 58px !important;
 }
-
 
 .my-brand-image {
     max-height: 38px !important;
