--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
                         <div class="body-frame-result">
                             <div class="font-labels">
                                 Inference Results
-                                <div class="result_label font-values">test</div>
+                                <div class="result_label font-values" id="result_label_1" data-inferenceCount=0>0</div>
                             </div>
                         </div>
                         <div class="body-frame-result">
@@ -140,7 +140,7 @@
                         <div class="body-frame-result">
                             <div class="font-labels">
                                 Inference Results
-                                <div class="result_label font-values">test</div>
+                                <div class="result_label font-values" id="result_label_2" data-inferenceCount=0>0</div>
                             </div>
                         </div>
                         <div class="body-frame-result">
@@ -226,7 +226,7 @@
                         <div class="body-frame-result">
                             <div class="font-labels">
                                 Inference Results
-                                <div class="result_label font-values">test</div>
+                                <div class="result_label font-values" id="result_label_3" data-inferenceCount=0>0</div>
                             </div>
                         </div>
                         <div class="body-frame-result">
@@ -344,11 +344,8 @@
                 .catch(err => console.log(`Error while establishing a connection : ${err.toString()}`));
 
             signalRHub.on('deviceTelemetry', function (payload) {
-                let jsonData = JSON.parse(payload);
-                let jsonPretty = JSON.stringify(jsonData, undefined, 2);
-                let timeStamp = getDate(jsonData["T"]);
-                console.debug(`deviceTelemetry ${jsonPretty}`);
-                document.getElementById("txAreaStatus").value += `${timeStamp} Telemetry : ${jsonPretty}\r\n`;
+
+                processTelemetry(payload);
             });
 
 
